--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     }
 </style>
         <div class="row">
-            <div class="container">
+            <div class="container" align="center">
                 <div class="col-md-12">
                     <div class="col-md-3">
                             <div class="">
