--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
+       <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-127197278-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-127197278-1');
+</script>
    <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,6 +33,21 @@
      
     </head>
    <body id="top">  
+       <!-- Load Facebook SDK for JavaScript -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<!-- Your customer chat code -->
+<div class="fb-customerchat"
+  attribution=setup_tool
+  page_id="297603894397444">
+</div>
       <div class="bg-grediunt">
           <div id="overlay"></div>
          <div class="bg-banner-img ">
@@ -87,7 +111,7 @@
                                 <h5 class="wow fadeInUp main-h" data-wow-delay="0.2s" >IEDC SUMMIT 2018</h5>   
                                 <p class="banner-text wow fadeInUp main-h3" data-wow-delay="0.8s">Powered by</p>
                            <h5 class="wow fadeInUp main-h" data-wow-delay="0.2s" >Kerala Startup Mission</h5>
-                           <p class="banner-text wow fadeInUp main-h3" data-wow-delay="0.8s">Venue</p>
+                           <p class="banner-text wow fadeInUp main-h3" data-wow-delay="0.8s">Hosted by</p>
                         <h5 class="wow fadeInUp main-h" data-wow-delay="0.2s" ><small>Amal Jyothi College<br>of Engineering<small>, Kanjirappally</small></h5>
                            <p class="banner-text wow fadeInUp main-h3" data-wow-delay="0.8s">Innovate for the birth of NEW KERALA...<br>Witness the beginning with us...</p>
                            <!--<div class="top-banner wow fadeInRight">
