--- a/contact.html
+++ b/contact.html
@@ -282,5 +282,20 @@
       <!-- Stellar JS-->
       <!-- Theme JS -->
       <script src="assets/js/theme.min.js"></script>
+
+
+      <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/5bbd986108387933e5bab913/default';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
    </body>
 </html>
