--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
   attribution=setup_tool
   page_id="297603894397444">
 </div>
-      <div class="about-bg-banner-img">
+      <div class="about-bg-banner-imgcontactus">
          <div class="overlay-all ">
             <!-- Header_Area -->
             <!-- header
@@ -100,10 +100,11 @@
                 <div class="header-nav__content">
                    <h3><a href="index.html">IEDC Summit 2018</a></h3>
                    <ul class="header-nav__list">
-                      <li class="current"><a class=""  href="index.html" >Home</a></li>
+                      <li><a class=""  href="index.html" >Home</a></li>
+                      <li><a class=""  href="announcements.html">Announcements</a></li>
                       <li><a class=""  href="mediacenter.html">Media Center</a></li>
                       <li><a class=""  href="downloads.html">Downloads</a></li>
-                      <li><a class=""  href="contact.html">Contact</a></li>
+                      <li class="current"><a class=""  href="contact.html">Contact</a></li>
                       <li><a class=""  href="#">Media Team</a></li>
                    </ul>
                    <ul class="header-nav__social">
@@ -256,7 +257,7 @@
                      
                   </div>                  
                   <div class="col-md-12" >
-                     <p class="color-gray" align="center">Designed by <a href="https://iedcajce.in">IEDC Summit Media Team</a> &amp; Powered by <a href="https://themewagon.com/">Startups Valley TBI</a></p>
+                     <p class="color-gray" align="center">Designed by <a href="https://iedcajce.in">IEDC Summit Media Team</a> &amp; Powered by <a href="https://www.startupsvalley.in/">Startups Valley TBI</a></p>
                   </div>
                </div>
             </div>
