--- a/mediacenter.html
+++ b/mediacenter.html
@@ -83,7 +83,7 @@
   attribution=setup_tool
   page_id="297603894397444">
 </div>
-      <div class="about-bg-banner-img">
+      <div class="about-bg-banner-imgmediacenter">
          <div class="overlay-all ">
             <!-- Header_Area -->
             <!-- header
@@ -93,8 +93,9 @@
                 <div class="header-nav__content">
                    <h3><a href="index.html">IEDC Summit 2018</a></h3>
                    <ul class="header-nav__list">
-                      <li class="current"><a class=""  href="index.html" >Home</a></li>
-                      <li><a class=""  href="mediacenter.html">Media Center</a></li>
+                      <li><a class=""  href="index.html" >Home</a></li>
+                      <li><a class=""  href="announcements.html">Announcements</a></li>
+                      <li class="current"><a class=""  href="mediacenter.html">Media Center</a></li>
                       <li><a class=""  href="downloads.html">Downloads</a></li>
                       <li><a class=""  href="contact.html">Contact</a></li>
                       <li><a class=""  href="#">Media Team</a></li>
@@ -284,7 +285,7 @@
                      
                   </div>                  
                   <div class="col-md-12" >
-                     <p class="color-gray" align="center"> Designed by <a href="https://iedcajce.in">IEDC Summit Media Team</a> &amp; Powered by <a href="https://themewagon.com/">Startups Valley TBI</a></p>
+                     <p class="color-gray" align="center"> Designed by <a href="https://iedcajce.in">IEDC Summit Media Team</a> &amp; Powered by <a href="https://www.startupsvalley.in/">Startups Valley TBI</a></p>
                   </div>
                </div>
             </div>
